Changelog for Hitman

x.x xxxx-xx-xx
 - Using Trimmomatic instead of FASTX Toolkit and USEARCH for trimming to take
   advantage of multithreading
 - Using ea-utils instead of USEARCH for FASTQ statistics for ease-of-parsing
 - Parallelized some steps using GNU Parallel

0.2 2014-03-18
 - Support for paired-end amplicon reads
 - Support for GZIP-compressed input files
 - Input mapping files are now optional, use 2-columnm tabular format instead
   of QIIME, and have a --mapping argument (separate from --input)
 - Input sequences can be formatted in SFF or FASTQ
 - Argument --input is now used for all scripts to provide sequences

0.1 2014-03-13
 - Initial version