@@ -4,10 +4,9 @@
 
 // Input is:
 // 1/ *.fna: FASTA reads, clean, trimmed to the same length, and named by sample
-// 2/ *.fna: FASTA file containing the two primers used (the first primer should
-//           be the one from which sequencing is started)
+// 2/ *.fna: FASTA file containing the two primers used (in no specific order)
 
-// Usage example: bpipe run pipeline_analyze.groovy sediments_QA.fna fwd_primer.fna
+// Usage example: bpipe run pipeline_analyze.groovy sediments_QA.fna primers.fna
 
 // Options:
 
@@ -73,6 +72,7 @@ make_otu_table = segment {
 
 
 assign_taxo_global = segment {
+   orient_primers +
    extract_amplicons.using(db:TAXO_DB) +
    usearch_global.using(perc:TAXO_MIN_IDENTITY)
 }
