@@ -1,9 +1,10 @@
 Changelog for Hitman
 
 x.x xxxx-xx-xx
+ - Primer orientation is now detected automatically
  - Using Trimmomatic instead of FASTX Toolkit and USEARCH for trimming to take
    advantage of multithreading
- - Using ea-utils instead of USEARCH for FASTQ statistics for ease-of-parsing
+ - Using ea-utils instead of USEARCH for FASTQ statistics for ease of parsing
  - Parallelized some steps using GNU Parallel
 
 0.2 2014-03-18
